# xav

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  build.sh
.cargo/: config.toml  config.toml.dynamic  config.toml.dynamic_lib  config.toml.dynamic_lib_notq  config.toml.dynamic_notq  config.toml.mac  config.toml.static  config.toml.static_notq
asm/: dav1d_x86inc.asm
asm/avx2/: bs.asm  conv.asm  crc32.asm  crc32_combine.asm  crc32_pclmul.asm  deint_nv12.asm  deint_nv12_to_10b.asm  deint_p010.asm  fc.asm  fc_spline.asm  lerp.asm  nal_scan.asm  pack.asm  pchip.asm  shift_p010.asm  unpack.asm
asm/avx2/atofu/: atof.asm  atof2.asm  atou.asm  scan.asm
asm/avx2/rem/: conv_rem.asm  deint_nv12_10b_rem.asm  deint_nv12_rem.asm  deint_p010_rem.asm  pack_rem.asm  shift_p010_rem.asm  unpack_rem.asm
asm/avx2/scd/: importance.asm  importance16.asm  satd.asm  satd16.asm  satd16_dc.asm  satd_dc.asm
asm/avx512/: conv.asm  crc32.asm  crc32_combine.asm  deint_nv12.asm  deint_nv12_to_10b.asm  deint_p010.asm  nal_scan.asm  pack.asm  shift_p010.asm  unpack.asm
asm/avx512/atofu/: atof.asm  atof2.asm  atou.asm  scan.asm
asm/avx512/rem/: conv_rem.asm  deint_nv12_10b_rem.asm  deint_nv12_rem.asm  deint_p010_rem.asm  pack_rem.asm  shift_p010_rem.asm  unpack_rem.asm
asm/avx512/scd/: importance.asm  importance16.asm  satd.asm  satd16.asm  satd16_dc.asm  satd_dc.asm
asm/sync/: ring_mpmc.asm  ring_mpmc_win.asm  ring_mpsc.asm  ring_mpsc_win.asm  ring_spmc.asm  ring_spmc_win.asm  ring_spsc.asm  ring_spsc_win.asm  sem.asm  sem_win.asm
src/: audio.rs  avx2.rs  avx512.rs  byte_range.rs  chunk.rs  copy.rs  crop.rs  dav1d.rs  dec.rs  decode.rs  enc.rs  encode.rs  encoder.rs  error.rs  ffms.rs  guide.txt  interp.rs  lang.rs  lavf.rs  main.rs  mkv_mux.rs  mux_webm.rs  nal_config.rs  nal_parse.rs  noise.rs  obu_parse.rs  ogg.rs  opus.rs  pack.rs  pipeline.rs  progs.rs  scalar.rs  scd.rs  simd.rs  svt.rs  svterr.rs  tests.rs  tq.rs  uring.rs  util.rs  (+3 more)
src/atofu/: avx2.rs  avx512.rs  mod.rs  scalar.rs
src/chan/: avx2.rs  mod.rs  scalar.rs
src/crop/: avx2.rs  avx512.rs  mod.rs  scalar.rs
src/mkv/: block_group.rs  chapters.rs  cluster.rs  cues.rs  ebml.rs  ebml_header.rs  element.rs  info.rs  mod.rs  mux.rs  read.rs  seek_head.rs  segment.rs  simple_block.rs  tags.rs  tracks.rs
src/mkv/crc32/: avx2_pclmul.rs  avx2_vpclmul.rs  avx512.rs  mod.rs  scalar.rs
src/nal_scan/: avx2.rs  mod.rs  scalar.rs
src/pack/: avx2.rs  avx512.rs  common.rs  mod.rs  scalar.rs
src/platform/: linux.rs  mac.rs  mod.rs  windows.rs
src/scd/: avx2.rs  avx512.rs  mod.rs  scalar.rs
test_files/: .gitignore  akiyo_10bit_mod2w_mod2h.mkv  akiyo_10bit_mod2w_mod8h.mkv  akiyo_10bit_mod4w_mod8h.mkv  akiyo_10bit_mod8.mkv  akiyo_8b_mod4w_mod8h.mkv  akiyo_8b_mod8.mkv  akiyo_8bit_mod2w_mod2h.mkv  akiyo_8bit_mod2w_mod8h.mkv
