[package]
name = "xav"
version = "0.1.0"
authors = ["Emre Akyüz emreakyuz_2@hotmail.com"]
edition = "2024"
description = "Obscure encoding framework"
readme = "README.md"
homepage = "https://github.com/emrakyz/xav"
repository = "https://github.com/emrakyz/xav"
license = "MIT"
keywords = ["av1", "video", "multimedia", "encoding", "quality", "chunking"]
categories = ["multimedia::video", "command-line-utilities"]

[features]
default = []
static = []
vship = []

[dependencies]
libc = "0.2.178"
crossbeam-channel = "0.5.15"
ffms2-sys = { git = "https://github.com/emrakyz/ffms2-rs", features = ["static"] }
av-scenechange = { git = "https://github.com/emrakyz/av-scenechange", default-features = false, features = ["ffms2", "asm", "nasm-rs", "cc", "libc"] }
av1-grain = "0.2.5"

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
lto = "fat"
