[package]
name = "xav"
version = "0.1.0"
authors = ["Emre Akyüz emreakyuz_2@hotmail.com"]
edition = "2024"
description = "Fastest, Most Efficient, Minimal, Chunked & Target Quality Video Encoding"
readme = "README.md"
homepage = "https://github.com/emrakyz/xav"
repository = "https://github.com/emrakyz/xav"
license = "MIT"
keywords = ["av1", "video", "multimedia", "encoding", "quality", "chunking"]
categories = ["multimedia::video", "command-line-utilities"]

[features]
default = [ "static", "vship", "libsvtav1" ]
static = []
vship = []
libsvtav1 = []

[dependencies]
libc = "0.2.182"
crossbeam-channel = "0.5.15"
ffms2-sys = { version = "0.3.0", features = ["static"] }
av-decoders = { git = "https://github.com/rust-av/av-decoders", default-features = false, features = ["ffms2"] }
av-scenechange = { git = "https://github.com/rust-av/av-scenechange", default-features = false, features = ["ffms2", "asm", "nasm-rs", "cc", "libc"] }
av1-grain = { version = "0.4.0", default-features = false, features = ["create", "parse"] }
sonic-rs = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[patch.crates-io]
av-decoders = { git = "https://github.com/rust-av/av-decoders" }

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
lto = "fat"

[lints.rust]
warnings = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
many_single_char_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# RESTRICTION LINTS can not be enabled as a group
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"
get_unwrap = "deny"
panic = "deny"
panic_in_result_fn ="deny"
unreachable = "deny"
big_endian_bytes = "deny"
as_pointer_underscore = "deny"
absolute_paths = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_union_representation = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exhaustive_enums = "deny"
exit = "deny"
